Implement host commands